[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
name = "advent-of-code"
version = "0.1.0"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[dependencies]
itertools = "0.7.4"
